...
    <string name="no_address_message">Local IP address not set</string>
    <string name="error_message">Error connecting with server</string>
    <string name="folder_empty_message">Folder is empty</string>


    <string name="no_address_icon_description">No address</string>
    <string name="set_server_menu_title">Set server address</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file_item">File item</string>
    <string name="folder_cover_image">Folder cover image</string>

    <plurals name="folder_item_count_text">
        <item quantity="one">%d element</item>
...
