...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/message_icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:contentDescription="@string/no_address_icon_description"
                app:srcCompat="@drawable/ic_settings_input_antenna_black_24dp"
                app:tint="?colorControlNormal" />
...
                android:layout_marginBottom="8dp"
                android:text="@string/no_address_message" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/folders_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:clipToPadding="false"
            tools:itemCount="8"
...
