<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_folder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    tools:text="Folder name"/>