<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/server_address_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_address_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginTop="8dp"
        android:text="@string/servers_found" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/servers_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/server_item"/>

    <Button
        android:id="@+id/search_servers_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_servers"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible"/>
</LinearLayout>